--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
 * {
-    /* margin: 0; */
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 main {
+    width: 50%;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    margin: 10px auto;
 }
 
 .color-section {
@@ -67,6 +73,19 @@ button {
     background-color: azure;
 }
 
+form {
+    margin: 10px auto;
+}
+
+section {
+    margin: 10px;
+}
+
+article {
+    margin: 10px auto;
+    text-align: justify;
+}
+
 #result{
     font-size: 30px;
     font-weight: bold;
@@ -75,4 +94,7 @@ button {
 
 footer {
     text-align: center;
+    background-color: lightblue;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
