--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
 
 html, body {
     height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 main {
@@ -14,6 +18,7 @@ main {
     justify-content: space-around;
     flex-direction: column;
     margin: 10px auto;
+    flex: 1;
 }
 
 .color-section {
@@ -86,6 +91,10 @@ article {
     text-align: justify;
 }
 
+.hidden {
+    display: none;
+}
+
 #result{
     font-size: 30px;
     font-weight: bold;
@@ -97,4 +106,5 @@ footer {
     background-color: lightblue;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-top: auto;
 }
