--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ article {
     display: none;
 }
 
+.hidden h1 {
+    margin-bottom: 5px;
+}
+
 #result{
     font-size: 30px;
     font-weight: bold;
