--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html, body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Montserrat', sans-serif;
 }
 
 main {
@@ -19,6 +20,10 @@ main {
     flex-direction: column;
     margin: 10px auto;
     flex: 1;
+}
+
+p {
+    font-size: 15px;
 }
 
 .color-section {
@@ -80,6 +85,7 @@ button {
 
 form {
     margin: 10px auto;
+    font-size: 14px;
 }
 
 section {
@@ -99,6 +105,11 @@ article {
     margin-bottom: 5px;
 }
 
+
+.color-section #result{
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
 #result{
     font-size: 30px;
     font-weight: bold;
